# ServerGameOfLife

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: RequestManager.cpp  RequestManager.h  Serveur.cpp  Serveur.h
